src/packaged/objects/Log__e/fields/RequestId__c.field-meta.xml
<CustomField>
    <fullName>RequestId__c</fullName>
    <label>RequestId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>