src/packaged/objects/Log__e/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <label>User</label>
    <length>20</length>
    <type>Text</type>
</CustomField>